--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,14 @@
-// Начните писать стили здесь
+@import "fonts.scss";
+@import "blocks/page__body.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/intro.scss";
+@import "blocks/download.scss";
+@import "blocks/features.scss";
+@import "blocks/reviews.scss";
+@import "blocks/prices.scss";
+@import "blocks/contacts.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/photos.scss";
+@import "blocks/editor.scss";
+@import "blocks/form.scss";
