Продолжаем вёрстку с препроцессором

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -27,11 +27,11 @@
   background-color: #f2f2f2;
 }
 
-.fieldset {
+.form__fieldset {
   border: 0;
 }
 
-.legend {
+.form__legend {
   font-size: 14px;
   line-height: 18px;
   color: #d22856;
