--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,6 +1,6 @@
 .page__body {
   background-color: #ffffff;
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   color: #283645;
 }
