--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,5 @@
 @import "fonts.scss";
-@import "blocks/page__body.scss";
+@import "blocks/page.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/intro.scss";
@@ -12,3 +12,5 @@
 @import "blocks/photos.scss";
 @import "blocks/editor.scss";
 @import "blocks/form.scss";
+@import "blocks/site-list.scss";
+@import "blocks/social-list.scss";
