--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -5,24 +5,20 @@
 .contacts__title {
   font-weight: 300;
   font-size: 24px;
-  line-height: 120%;
+  line-height: 1.2;
   color: #283645;
 }
 
-.contacts__item {
-  p {
+.contacts__item p {
     font-weight: bold;
     font-size: 18px;
     line-height: 25px;
-  }
-
-  a,
-  address {
+}
+.contacts__item a, address {
     font-style: normal;
     font-weight: 300;
     font-size: 24px;
     line-height: 33px;
     text-decoration: none;
     color: #d22856;
-  }
 }
