--- a/source/sass/blocks/prices.scss
+++ b/source/sass/blocks/prices.scss
@@ -18,7 +18,7 @@
   line-height: 30px;
 }
 
-.prices_advantage {
+.prices__advantage {
   font-size: 14px;
   line-height: 30px;
   text-transform: uppercase;
