--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -10,15 +10,17 @@
 }
 
 .contacts__item p {
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 25px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
 }
-.contacts__item a, address {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 33px;
-    text-decoration: none;
-    color: #d22856;
+
+.contacts__item a,
+address {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 33px;
+  text-decoration: none;
+  color: #d22856;
 }
