--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,3 +1,24 @@
-.main-nav__toggle {
-  text-align: right;
+.main-nav {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 1200px) {
+  .main-nav {
+    flex-direction: row;
+    flex-grow: 1;
+  }
+
+  .main-nav__wrapper {
+    flex-grow: 1;
+  }
+
+  .main-nav__toggle {
+    display: none;
+  }
+}
+
+.main-nav__list {
+  padding: 0;
+  margin: 0;
 }
