--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,7 @@
 @import "blocks/form.scss";
 @import "blocks/site-list.scss";
 @import "blocks/social-list.scss";
+@import "blocks/slider.scss";
+@import "blocks/prices-slider.scss";
+@import "blocks/map.scss";
+@import "blocks/effect.scss";
