--- a/source/sass/blocks/editor.scss
+++ b/source/sass/blocks/editor.scss
@@ -1,3 +1,48 @@
 .editor {
   background-color: #f2f2f2;
+  padding: 20px 20px 41px 20px;
+}
+
+.editor img {
+  display: block;
+}
+
+.editor__options {
+  display: flex;
+}
+
+.editor__buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 660px) {
+  .editor {
+    display: flex;
+  }
+
+  .editor__block {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .editor__options {
+    flex-direction: column;
+    width: 50%;
+  }
+
+  .editor__range {
+    width: 50%;
+  }
+
+  .editor__buttons {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .editor__buttons {
+    flex-direction: row;
+  }
 }
