--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,3 +1,19 @@
+.page-footer {
+  min-height: 284px;
+  padding: 40px 74px 40px 74px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media (min-width: 660px) {
+  .page-footer {
+    flex-direction: row;
+  }
+}
+
 .page-footer__credits {
   span {
     font-size: 14px;
