--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,15 @@
 .page-header {
   background-color: #283645;
-  padding: 23px 20px;
+}
+
+.page-header > a {
+  display: block;
+  padding-top: 23px;
+  padding-left: 20px;
+}
+
+@media (min-width: 1200px) {
+  .page-header {
+    display: flex;
+  }
 }
