--- a/source/sass/blocks/prices-slider.scss
+++ b/source/sass/blocks/prices-slider.scss
@@ -1,8 +1,18 @@
 .prices-slider {
   position: relative;
-  min-height: 460px;
+  min-height: 330px;
+}
+
+@media (min-width: 660px) {
+  .prices-slider {
+    min-height: 290px;
+  }
 }
 
 .prices-slider__toggles {
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  right: 0;
   text-align: center;
 }
