--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,16 +1,51 @@
 .contacts {
   background-color: #ffffff;
   min-height: 395px;
-  padding: 50px 39px 22px 39px;
+  padding: 40px 39px 15px 39px;
   box-sizing: border-box;
   text-align: center;
 }
 
+@media (min-width: 660px) {
+  .contacts {
+    padding: 40px 10px 5px 10px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .contacts {
+    min-height: 365px;
+    padding: 60px 115px 0 115px;
+  }
+}
+
 .contacts__list {
-  margin-top: 45px;
+  margin-top: 35px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.contacts__item {
+  margin-bottom: 18px;
+}
+
+@media (min-width: 660px) {
+  .contacts__item:nth-child(3) {
+    padding: 0 25px;
+    padding-top: 28px;
+    box-sizing: border-box;
+  }
+}
+
+@media (min-width: 1200px) {
+  .contacts__item:nth-child(2) {
+    order: 1;
+  }
+
+  .contacts__item:nth-child(3) {
+    padding: 0 20px;
+  }
 }
 
 @media (min-width: 660px) {
@@ -18,6 +53,12 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+  }
+}
+
+@media (min-width: 1200px) {
+  .contacts__list {
+    margin-top: 39px;
   }
 }
 
@@ -30,14 +71,40 @@
 }
 
 @media (min-width: 660px) {
+  .contacts__title {
+    font-size: 40px;
+    line-height: 54px;
+    padding: 0 25px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .contacts__title {
+    font-size: 50px;
+    line-height: 68px;
+  }
+}
+
+@media (min-width: 660px) {
   .contacts__item {
     width: 50%;
   }
 }
 
 @media (min-width: 1200px) {
+  .contacts__title {
+    width: 462px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1200px) {
   .contacts__item {
     width: 33%;
+  }
+
+  .contacts__item p:first-child {
+    margin-bottom: 20px;
   }
 }
 
