--- a/source/sass/blocks/download.scss
+++ b/source/sass/blocks/download.scss
@@ -5,25 +5,70 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 28px 20px 38px 20px;
+  padding: 28px 20px 30px 20px;
   box-sizing: border-box;
-  justify-content: space-between;
+}
+
+@media (min-width: 660px) {
+  .download {
+    background-color: transparent;
+    position: relative;
+    padding: 0;
+    padding-top: 30px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .download {
+    padding-top: 35px;
+  }
 }
 
 .download__button {
   color: #ffffff;
-  font-size: 18px;
-  line-height: 18px;
-  font-weight: bold;
-  text-decoration: none;
+  border: 3px solid #ffffff;
+}
+
+@media (min-width: 660px) {
+  .download__button {
+    padding: 15px 45px;
+    margin-bottom: 45px;
+    margin-left: 15px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .download__button {
+    margin-bottom: 68px;
+    margin-left: 0;
+    padding: 15px 30px;
+    font-size: 21px;
+  }
 }
 
 .download__list {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-top: 30px;
   display: flex;
   align-items: baseline;
+  min-width: 200px;
+  justify-content: space-between;
+}
+
+@media (min-width: 660px) {
+  .download__list {
+    margin: 0;
+    margin-left: 15px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .download__list {
+    margin-bottom: 20px;
+    margin-left: 0;
+  }
 }
 
 .download__description {
@@ -33,4 +78,20 @@
   line-height: 24px;
   text-align: center;
   margin: 0;
+  margin-top: 18px;
+}
+
+@media (min-width: 660px) {
+  .download__description {
+    font-size: 18px;
+    min-width: 300px;
+    margin-top: 28px;
+    margin-left: 17px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .download__description {
+    margin-left: 0;
+  }
 }
