--- a/source/sass/blocks/editor.scss
+++ b/source/sass/blocks/editor.scss
@@ -1,20 +1,87 @@
 .editor {
   background-color: #f2f2f2;
-  padding: 20px 20px 41px 20px;
+  padding: 20px 20px 33px 20px;
 }
+
+@media (min-width: 660px) {
+  .editor__image img {
+    display: block;
+    width: 300px;
+    height: 400px;
+  }
+}
+
 
 .editor__options {
   display: flex;
+  min-height: 120px;
+  padding: 0 20px;
 }
 
 .editor__buttons {
   display: flex;
   flex-direction: column;
+  margin-top: 27px;
+  padding-top: 38px;
+}
+
+.editor__range-block {
+  min-height: 14px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 0 20px;
+}
+
+@media (min-width: 660px) {
+  .editor__range-block {
+    margin-bottom: 57px;
+    justify-content: center;
+    padding: 0;
+  }
+}
+
+.editor__range-block:nth-child(2),
+.editor__range-block:nth-child(3) {
+  display: none;
+}
+
+@media (min-width: 660px) {
+  .editor__range-block:nth-child(2),
+  .editor__range-block:nth-child(3) {
+    display: flex;
+  }
+}
+
+.editor__scale {
+  height: 2px;
+  background-color: #283645;
+}
+
+.editor__toggle {
+  width: 10px;
+  height: 10px;
+  background-color: #ffffff;
+  border: 2px solid #d22856;
+  border-radius: 50%;
+  position: absolute;
+  right: 53px;
+  top: -5px;
+  cursor: pointer;
+}
+
+.editor__button {
+  color: #d22856;
+  border: 3px solid #d22856;
+  margin-bottom: 12px;
 }
 
 @media (min-width: 660px) {
   .editor {
     display: flex;
+    min-height: 511px;
+    box-sizing: border-box;
+    padding-top: 57px;
   }
 
   .editor__block {
@@ -25,20 +92,87 @@
 
   .editor__options {
     flex-direction: column;
-    width: 50%;
+    width: 100px;
+    padding: 0;
   }
 
   .editor__range {
-    width: 50%;
+    width: 202px;
+    display: flex;
+    flex-direction: column;
+    padding: 14px 0;
+  }
+
+  .editor__toggle {
+    top: 0;
+  }
+
+  .editor__range-block:nth-child(1) .editor__toggle {
+    right: 43px;
+  }
+
+  .editor__range-block:nth-child(2) .editor__toggle {
+    left: 25px;
+  }
+
+  .editor__range-block:nth-child(3) .editor__toggle {
+    left: 96px;
   }
 
   .editor__buttons {
     width: 100%;
+    margin: 0;
+    padding: 24px 12px 0 46px;
+  }
+
+  .editor__button {
+    margin-bottom: 22px;
   }
 }
 
 @media (min-width: 1200px) {
+  .editor__range {
+    width: 288px;
+  }
+
+  .editor__range-block:nth-child(1) .editor__toggle {
+    left: 70px;
+  }
+
+  .editor__range-block:nth-child(2) .editor__toggle {
+    left: 247px;
+  }
+
+  .editor__range-block:nth-child(3) .editor__toggle {
+    left: 159px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .editor__options {
+    width: 182px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .editor {
+    width: 940px;
+    margin: 0 auto;
+    min-height: 514px;
+    padding: 57px 60px 35px 80px;
+    margin-bottom: 28px;
+  }
+
   .editor__buttons {
     flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+    padding-left: 90px;
+    padding-top: 105px;
+    padding-right: 0;
+  }
+
+  .editor__button {
+    min-width: 183px;
   }
 }
