--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -5,8 +5,24 @@
 }
 
 .features__title-block {
-  min-height: 250px;
+  min-height: 170px;
   background-color: #ffffff;
+  padding-top: 42px;
+}
+
+@media (min-width: 660px) {
+  .features__title-block {
+    padding-top: 50px;
+    min-height: 238px;
+    box-sizing: border-box;
+  }
+}
+
+@media (min-width: 1200px) {
+  .features__title-block {
+    padding-top: 60px;
+    min-height: 317px;
+  }
 }
 
 .features__title {
@@ -14,42 +30,137 @@
   font-size: 24px;
   line-height: 120%;
   text-align: center;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+@media (min-width: 660px) {
+  .features__title {
+    font-size: 40px;
+    margin: 0;
+  }
+
+  .features__title:nth-child(2) {
+    width: 340px;
+    margin: 0 auto;
+    margin-top: 8px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .features__title {
+    font-size: 50px;
+    line-height: 68px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .features__title:nth-child(2) {
+    width: 420px;
+    margin-top: 0;
+  }
 }
 
 .features__list {
   list-style: none;
   background-color: #f2f2f2;
   margin: 0;
-  padding: 53px 20px 0 20px;
+  padding: 85px 20px 0 20px;
+  margin-bottom: 40px;
+}
+
+.features__item {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.features__image img {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: -45px;
 }
 
 @media (min-width: 660px) {
   .features__list-block {
     display: flex;
+    min-height: 485px;
   }
 
   .features__list {
     order: 1;
+    width: 50%;
+    box-sizing: border-box;
+    padding-left: 0;
+    padding-top: 77px;
+    margin-bottom: 0;
+  }
+
+  .features__item {
+    text-align: left;
+  }
+
+  .features__item:last-child {
+    margin-bottom: 0;
+  }
+
+  .features__image {
+    width: 50%;
   }
 }
 
 @media (min-width: 1200px) {
   .features__list {
     display: flex;
+    padding: 0 160px;
+    width: 100%;
+    justify-content: space-between;
+    padding-top: 43px;
   }
-}
 
-.features__item {
-  text-align: center;
+  .features__list-block {
+    flex-direction: column;
+    min-height: 616px;
+  }
+
+  .features__image {
+    width: 100%;
+  }
+
+  .features__image img {
+    margin: 0;
+  }
+
+  .features__item {
+    text-align: center;
+    width: 240px;
+  }
 }
 
 .features__item-name {
   font-weight: bold;
   font-size: 18px;
   line-height: 24px;
+  margin: 0;
+  margin-bottom: 14px;
+}
+
+@media (min-width: 1200px) {
+  .features__item-name {
+    font-size: 30px;
+    line-height: 30px;
+  }
 }
 
 .features__description {
   font-size: 14px;
   line-height: 24px;
+  margin: 0;
+}
+
+@media (min-width: 1200px) {
+  .features__description {
+    font-size: 18px;
+    line-height: 30px;
+    margin-top: 21px;
+  }
 }
