--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,7 +1,7 @@
 .intro {
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  padding-top: 29px;
+  padding-top: 20px;
   min-height: 396px;
   position: relative;
   box-sizing: border-box;
@@ -10,19 +10,39 @@
   flex-direction: column;
 }
 
-.intro img {
-  width: fit-content;
+@media (min-width: 660px) {
+  .intro {
+    padding-top: 90px;
+    min-height: 616px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .intro {
+    padding-top: 210px;
+    padding-left: 120px;
+    min-height: 853px;
+  }
+}
+
+.intro__image img {
+  display: block;
 }
 
 @media (min-width: 660px) {
-  .intro img {
+  .intro__image {
     order: 2;
+    position: absolute;
+    bottom: 0;
+    right: 0;
   }
 }
 
 .intro--small {
-  min-height: 237px;
+  min-height: 167px;
+  padding-top: 25px;
 }
+
 
 .intro__title {
   color: #ffffff;
@@ -31,4 +51,53 @@
   margin: 0 auto;
   text-align: center;
   width: 263px;
+  margin-bottom: 30px;
+}
+
+.intro--small .intro__title {
+  line-height: 33px;
+}
+
+
+@media (min-width: 660px) {
+  .intro__title {
+    font-size: 40px;
+    margin: 0;
+    margin-left: 40px;
+  }
+}
+
+@media (min-width: 660px) {
+  .intro--small {
+    padding-top: 62px;
+    min-height: 326px;
+  }
+
+  .intro--small .intro__title {
+    font-size: 50px;
+    line-height: 68px;
+    width: 620px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .intro--small {
+    padding-left: 0;
+    min-height: 394px;
+    padding-top: 170px;
+  }
+
+  .intro--small .intro__title {
+    width: 747px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .intro__title {
+    font-size: 50px;
+    line-height: 68px;
+    margin: 0;
+    margin-left: 30px;
+  }
 }
