--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,23 +1,84 @@
 .page-footer {
   min-height: 284px;
-  padding: 40px 74px 40px 74px;
+  padding: 37px 74px 40px 74px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+}
+
+.page-footer__social {
+  margin-top: 50px;
+}
+
+.page-footer__credits {
+  display: flex;
+  align-items: center;
+  margin-top: 47px;
+
+  span {
+    font-size: 14px;
+    line-height: 18px;
+    color: #283645;
+  }
 }
 
 @media (min-width: 660px) {
   .page-footer {
     flex-direction: row;
+    padding: 0 20px;
+    min-height: 127px;
+  }
+
+  .page-footer__link {
+    width: 33.3%;
+  }
+
+  .page-footer__social {
+    margin: 0;
+    width: 33.3%;
+    padding: 0 92px;
+  }
+
+  .page-footer__credits {
+    margin: 0;
+    width: 33.3%;
+    justify-content: flex-end;
+  }
+
+  .page-footer__credits-logo img {
+    display: block;
+    margin-left: 2px;
   }
 }
 
-.page-footer__credits {
-  span {
-    font-size: 14px;
-    line-height: 18px;
-    color: #283645;
+@media (min-width: 1200px) {
+  .page-footer {
+    padding: 0 128px 0 130px;
+    min-height: 197px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-footer__link {
+    width: 40%;
+  }
+
+  .page-footer__social {
+    width: 20%;
+    padding: 0;
+  }
+
+  .page-footer__credits {
+    margin: 0;
+    width: 40%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-footer__credits {
+    span {
+      font-size: 18px;
+    }
   }
 }
