--- a/source/sass/blocks/photos.scss
+++ b/source/sass/blocks/photos.scss
@@ -14,8 +14,17 @@
     width: 100%;
   }
 
-  .photos__block {
-    width: 50%;
+  .photos__block-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 20px;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1200px) {
+  .photos__block-wrapper {
+    padding: 0 130px;
   }
 }
 
@@ -32,10 +41,49 @@
   }
 }
 
+@media (min-width: 1200px) {
+  .photos__intro {
+    width: 572px;
+    margin: 0 auto;
+  }
+}
+
 .photos__intro-block {
   min-height: 184px;
   box-sizing: border-box;
-  padding: 54px 20px 60px 20px;
+  padding: 44px 20px 20px 20px;
+}
+
+@media (min-width: 660px) {
+  .photos__intro-block {
+    min-height: 228px;
+    padding: 90px 60px 20px 60px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .photos__intro-block {
+    min-height: 240px;
+  }
+}
+
+.photos__intro-block--down {
+  min-height: 154px;
+  padding-top: 22px;
+}
+
+@media (min-width: 660px) {
+  .photos__intro-block--down {
+    min-height: 174px;
+    padding-top: 45px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .photos__intro-block--down {
+    min-height: 131px;
+    padding-top: 5px;
+  }
 }
 
 .photos__block {
@@ -44,7 +92,7 @@
 
 @media (min-width: 1200px) {
   .photos__block {
-    width: 33%;
+    margin-bottom: 54px;
   }
 }
 
@@ -59,9 +107,73 @@
   line-height: 24px;
   width: 280px;
   margin: 0 auto;
-  padding: 25px 10px 26px 17px;
+  padding: 18px 10px 18px 17px;
   box-sizing: border-box;
 }
+
+@media (min-width: 660px) {
+  .photos__description {
+    min-height: 155px;
+    padding: 23px 10px 22px 30px;
+    margin: 0;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .photos__block--first {
+    margin-bottom: 50px;
+  }
+
+  .photos__block--first .photos__description {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    min-height: 121px;
+  }
+
+  .photos__block--first .photos__text {
+    order: 1;
+    margin-top: -7px;
+  }
+
+  .photos__block--first .photos__like {
+    margin-left: auto;
+    margin-top: 2px;
+    margin-right: 50px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .photos__description {
+    padding-left: 27px;
+  }
+}
+
+/*временно*/
+@media (min-width: 660px) {
+  .photos__block img {
+    width: 300px;
+    height: 300px;
+  }
+
+  .photos__block--first img {
+    width: 660px;
+    height: 509px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .photos__block img {
+    height: 400px;
+  }
+
+  .photos__block--first img {
+    width: 1200px;
+    height: 506px;
+  }
+}
+
 
 .photos__block--first .photos__description {
   width: auto;
@@ -71,6 +183,14 @@
 @media (min-width: 1200px) {
   .photos__block--first .photos__description {
     margin: 0 130px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 27px;
+    min-height: 96px;
+  }
+
+  .photos__block--first .photos__text {
+    order: 1;
   }
 }
 
@@ -87,9 +207,17 @@
 .photos__like {
   color: #d22856;
   text-transform: uppercase;
-  margin-top: 25px;
   display: block;
   font-size: 12px;
+  margin-top: 11px;
+  margin-left: 31px;
+}
+
+@media (min-width: 660px) {
+  .photos__like {
+    margin-left: 0;
+    margin-top: auto;
+  }
 }
 
 .photos__block--first {
