--- a/source/sass/blocks/prices.scss
+++ b/source/sass/blocks/prices.scss
@@ -7,6 +7,22 @@
   overflow: hidden;
 }
 
+@media (min-width: 660px) {
+  .prices {
+    padding-top: 58px;
+    margin-top: 15px;
+    padding-bottom: 0;
+    min-height: auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .prices {
+    padding-top: 157px;
+    min-height: 534px;
+  }
+}
+
 .prices__list {
   display: flex;
   position: absolute;
@@ -16,6 +32,23 @@
 @media (min-width: 660px) {
   .prices__list {
     transform: none;
+    min-width: 616px;
+    margin-left: 20px;
+  }
+
+  .prices__advantage {
+    display: none;
+  }
+
+  .prices__item:first-child .prices__advantage {
+    display: block;
+    text-transform: none;
+  }
+
+  .prices__item:first-child dl {
+    padding: 0;
+    padding-top: 6px;
+    padding-left: 15px;
   }
 }
 
@@ -23,10 +56,17 @@
   width: 280px;
 }
 
+@media (min-width: 660px) {
+  .prices__item {
+    width: 153px;
+    margin-left: 2px;
+  }
+}
+
 .prices__item dl {
   display: flex;
   min-height: 59px;
-  padding: 19px 17px 19px 20px;
+  padding: 14px 17px 9px 20px;
   box-sizing: border-box;
   justify-content: space-between;
   border: 2px solid #f2f2f2;
@@ -39,8 +79,8 @@
   background-color: #283645;
   color: white;
   text-align: center;
-  min-height: 94px;
-  padding-top: 19px;
+  min-height: 98px;
+  padding-top: 9px;
 }
 
 .prices__item dl,
@@ -55,10 +95,22 @@
   text-transform: uppercase;
 }
 
+@media (min-width: 1200px) {
+  .prices__name {
+    font-size: 18px;
+  }
+}
+
 .prices__amount {
   font-weight: 300;
   font-size: 18px;
   line-height: 30px;
+}
+
+@media (min-width: 1200px) {
+  .prices__amount {
+    font-size: 24px;
+  }
 }
 
 .prices__advantage {
@@ -71,13 +123,82 @@
   display: none;
 }
 
+.prices__toggles {
+  display: flex;
+  width: 55px;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
 @media (min-width: 660px) {
   .prices__item:first-child {
     display: block;
-    padding-top: 100px;
+    padding-top: 81px;
+  }
+
+  .prices__item dl {
+    min-height: 45px;
+    padding: 0;
+    margin-bottom: 2px;
+    border: none;
+  }
+
+  .prices__item dd {
+    margin: auto;
+  }
+
+  .prices__item dl:first-child {
+    min-height: 79px;
+    padding: 0;
+    border: 2px solid #283645;
+    padding-top: 8px;
   }
 
   .prices__item:first-child dl:first-child {
     display: none;
+  }
+
+  .prices__item:nth-child(2) dl:first-child {
+    border-radius: 1px 0 0 0;
+  }
+
+  .prices__item:last-child dl:first-child {
+    border-radius: 0 1px 0 0;
+  }
+
+  .prices-slider__toggles {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .prices__list {
+    margin-left: 130px;
+  }
+
+  .prices__item {
+    width: 234px;
+  }
+
+  .prices__item:first-child {
+    padding-top: 100px;
+  }
+
+  .prices__item:first-child dl {
+    padding-top: 10px;
+    padding-left: 20px;
+  }
+
+  .prices__item dl {
+    min-height: 59px;
+  }
+
+  .prices__item dl:first-child {
+    min-height: 98px;
+    padding-top: 15px;
+  }
+
+  .prices__advantage {
+    font-size: 18px;
   }
 }
