--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,8 +1,37 @@
 .reviews {
   background-color: #ffffff;
-  padding: 50px 20px 60px 20px;
+  padding: 40px 20px 60px 20px;
   min-height: 364px;
   box-sizing: border-box;
+}
+
+@media (min-width: 660px) {
+  .reviews {
+    padding-top: 75px;
+    padding-bottom: 20px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .reviews {
+    padding-top: 165px;
+  }
+}
+
+.reviews__list {
+  margin-bottom: 20px;
+}
+
+@media (min-width: 660px) {
+  .reviews__list {
+    margin-bottom: 45px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .reviews__list {
+    margin-bottom: 0;
+  }
 }
 
 .reviews__item {
@@ -19,13 +48,36 @@
   font-style: normal;
 }
 
+@media (min-width: 660px) {
+  .reviews__author-name {
+    font-size: 20px;
+    margin-top: 15px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .reviews__author-name {
+    font-size: 24px;
+    margin-top: 20px;
+  }
+}
+
 .reviews__author-description {
   display: none;
+  font-size: 14px;
 }
 
 @media (min-width: 660px) {
   .reviews__author-description {
     display: block;
+    margin: 0;
+    margin-top: 5px;
+  }
+}
+
+@media (min-width: 660px) {
+  .reviews__author-description {
+    font-size: 18px;
   }
 }
 
@@ -37,5 +89,16 @@
 @media (min-width: 660px) {
   .reviews__text {
     order: -1;
+    font-size: 18px;
+    line-height: 30px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .reviews__wrapper {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 126px;
+    box-sizing: border-box;
   }
 }
