--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -189,7 +189,7 @@
 @media (min-width: 660px) {
   .form__block--submit {
     width: 100%;
-    padding-bottom: 41px;
+    padding-bottom: 50px;
   }
 }
 
@@ -221,13 +221,11 @@
   }
 }
 
-
 @media (min-width: 1200px) {
   .form__block--contacts .form__input-block {
     margin-bottom: 0;
   }
 }
-
 
 .form__input {
   font-size: 18px;
@@ -580,12 +578,59 @@
   }
 }
 
-.form__failure-pop-up {
-  display: none;
-}
-
+.form__failure-pop-up,
 .form__success-pop-up {
   display: none;
+  width: 320px;
+  min-height: 289px;
+  padding: 44px 0 52px 0;
+  box-sizing: border-box;
+  text-align: center;
+  font-size: 14px;
+  line-height: 24px;
+  margin: 0 auto;
+
+  @include tablet {
+    width: 460px;
+    font-size: 18px;
+  }
+
+  @include desktop {
+    width: 780px;
+  }
+}
+
+.form__failure-pop-up p:first-child,
+.form__success-pop-up p:first-child {
+  font-size: 18px;
+
+  @include tablet {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+
+.form__button-wrapper {
+  min-height: 163px;
+  display: flex;
+  align-items: center;
+  background-color: #f2f2f2;
+}
+
+.form__failure-pop-up .form__button-wrapper {
+  @media (max-width: 1199px) {
+    background-color: #ffffff;
+  }
+}
+
+.form__button-wrapper button {
+  margin: 0 auto;
+}
+
+.form__success-pop-up button {
+  @include desktop {
+    width: 460px;
+  }
 }
 
 .form__title--appeal {
