--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,5 @@
-@import "blocks/button.scss";
+@import "base.scss";
+@import "mixin.scss";
 @import "fonts.scss";
 @import "blocks/page.scss";
 @import "blocks/page-header.scss";
@@ -19,3 +20,4 @@
 @import "blocks/prices-slider.scss";
 @import "blocks/map.scss";
 @import "blocks/effect.scss";
+@import "../css/normalize.css";
