--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -68,18 +68,14 @@
   line-height: 1.2;
   color: #283645;
   margin: 0;
-}
 
-@media (min-width: 660px) {
-  .contacts__title {
+  @include tablet {
     font-size: 40px;
     line-height: 54px;
     padding: 0 25px;
   }
-}
 
-@media (min-width: 1200px) {
-  .contacts__title {
+  @include desktop {
     font-size: 50px;
     line-height: 68px;
   }
@@ -107,7 +103,6 @@
     margin-bottom: 20px;
   }
 }
-
 
 .contacts__item p {
   font-weight: bold;
