--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -8,7 +8,7 @@
 }
 
 .page-footer__social {
-  margin-top: 50px;
+  margin-top: 56px;
 }
 
 .page-footer__credits {
@@ -76,9 +76,7 @@
 }
 
 @media (min-width: 1200px) {
-  .page-footer__credits {
-    span {
-      font-size: 18px;
-    }
+  .page-footer__credits span {
+    font-size: 18px;
   }
 }
